--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4350,6 +4350,14 @@ blockquote .TOC,
     text-align: center;
 }
 
+.wikipedia-entry .gallery {
+	--list-bullet: none;
+	--list-left-padding: 0.25em;
+
+	display: flex;
+	flex-flow: row wrap;
+}
+
 /*  Special case for math in Wikipedia pop-frames.
  */
 .wikipedia-entry .wikipedia-math-wrapper img {
