--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -249,10 +249,12 @@
     --GW-popups-popup-title-bar-background-color: #fff;
     --GW-popups-popup-title-bar-button-color: #bbb;
     --GW-popups-popup-title-bar-button-color-hover: #000;
+    --GW-popups-popup-title-bar-button-color-disabled: #eee;
 	--GW-popups-popup-title-color: #aaa;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
     --GW-popups-popup-title-bar-button-focused-color: #777;
     --GW-popups-popup-title-bar-button-focused-color-hover: #000;
+    --GW-popups-popup-title-bar-button-focused-color-disabled: #ddd;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #ddd;
 	--GW-popups-popup-title-focused-color: #000;
     --GW-popups-popup-title-link-hover-focused-color: var(--GW-body-link-hover-color);
@@ -590,10 +592,12 @@
     --GW-popups-popup-title-bar-background-color: #000;
     --GW-popups-popup-title-bar-button-color: #6c6c6c;
     --GW-popups-popup-title-bar-button-color-hover: #fff;
+    --GW-popups-popup-title-bar-button-color-disabled: #333;
 	--GW-popups-popup-title-color: #7c7c7c;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
     --GW-popups-popup-title-bar-button-focused-color: #a6a6a6;
     --GW-popups-popup-title-bar-button-focused-color-hover: #fff;
+    --GW-popups-popup-title-bar-button-focused-color-disabled: #494949;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #494949;
 	--GW-popups-popup-title-focused-color: #fff;
     --GW-popups-popup-title-link-hover-focused-color: var(--GW-body-link-hover-color);
@@ -845,6 +849,6 @@ div#masked-links-key-toggle-info-alert img {
 }
 
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1733168106">
-<script src="/static/js/head.js?v=1733168106"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1733032993" as="image">
+<link rel="stylesheet" href="/static/css/head.css?v=1733355652">
+<script src="/static/js/head.js?v=1733355651"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1733355651" as="image">
