--- a/include/inlined-standalone.html
+++ b/include/inlined-standalone.html
@@ -249,10 +249,12 @@
     --GW-popups-popup-title-bar-background-color: #fff;
     --GW-popups-popup-title-bar-button-color: #bbb;
     --GW-popups-popup-title-bar-button-color-hover: #000;
+    --GW-popups-popup-title-bar-button-color-disabled: #eee;
 	--GW-popups-popup-title-color: #aaa;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
     --GW-popups-popup-title-bar-button-focused-color: #777;
     --GW-popups-popup-title-bar-button-focused-color-hover: #000;
+    --GW-popups-popup-title-bar-button-focused-color-disabled: #ddd;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #ddd;
 	--GW-popups-popup-title-focused-color: #000;
     --GW-popups-popup-title-link-hover-focused-color: var(--GW-body-link-hover-color);
@@ -339,5 +341,5 @@
 	--GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-000-fff-2x-gif);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1733170717">
-<link rel="stylesheet" href="/static/css/style.css?v=1733170717">
+<link rel="stylesheet" href="/static/css/head.css?v=1733355652">
+<link rel="stylesheet" href="/static/css/style.css?v=1733355652">
