--- a/css/dark-mode-GENERATED.css
+++ b/css/dark-mode-GENERATED.css
@@ -248,10 +248,12 @@
     --GW-popups-popup-title-bar-background-color: #000;
     --GW-popups-popup-title-bar-button-color: #6c6c6c;
     --GW-popups-popup-title-bar-button-color-hover: #fff;
+    --GW-popups-popup-title-bar-button-color-disabled: #333;
 	--GW-popups-popup-title-color: #7c7c7c;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
     --GW-popups-popup-title-bar-button-focused-color: #a6a6a6;
     --GW-popups-popup-title-bar-button-focused-color-hover: #fff;
+    --GW-popups-popup-title-bar-button-focused-color-disabled: #494949;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #494949;
 	--GW-popups-popup-title-focused-color: #fff;
     --GW-popups-popup-title-link-hover-focused-color: var(--GW-body-link-hover-color);
