--- a/css/light-mode-GENERATED.css
+++ b/css/light-mode-GENERATED.css
@@ -248,10 +248,12 @@
     --GW-popups-popup-title-bar-background-color: #fff;
     --GW-popups-popup-title-bar-button-color: #bbb;
     --GW-popups-popup-title-bar-button-color-hover: #000;
+    --GW-popups-popup-title-bar-button-color-disabled: #eee;
 	--GW-popups-popup-title-color: #aaa;
     --GW-popups-popup-title-link-hover-color: var(--GW-body-link-hover-color);
     --GW-popups-popup-title-bar-button-focused-color: #777;
     --GW-popups-popup-title-bar-button-focused-color-hover: #000;
+    --GW-popups-popup-title-bar-button-focused-color-disabled: #ddd;
     --GW-popups-popup-title-bar-submenu-box-shadow-color: #ddd;
 	--GW-popups-popup-title-focused-color: #000;
     --GW-popups-popup-title-link-hover-focused-color: var(--GW-body-link-hover-color);
