--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2631,18 +2631,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5803,7 +5803,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5984,7 +5984,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6445,7 +6445,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7422,7 +7422,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#question');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7626,7 +7626,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -7857,8 +7857,11 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 #page-toolbar .extracts-mode-selector {
     order: 3;
 }
-#page-toolbar #google-search {
+#page-toolbar #search-widget {
     order: 4;
+}
+#page-toolbar #help-widget {
+    order: 5;
 }
 
 #page-toolbar .mode-selector button .label {
@@ -7962,21 +7965,41 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 
 /*****************/
+/* LINKS WIDGETS */
+/*****************/
+/*	(e.g. Search, Help)
+ */
+
+#page-toolbar .link-widget a {
+    display: block;
+}
+#page-toolbar .link-widget a .icon {
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+}
+#page-toolbar .link-widget a svg {
+    display: block;
+}
+
+
+/*****************/
 /* SEARCH WIDGET */
 /*****************/
 
-#page-toolbar #google-search a {
-    display: block;
-}
-#page-toolbar #google-search a .icon {
+#page-toolbar #search-widget a .icon {
 	padding: 5px;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	box-sizing: border-box;
 }
-#page-toolbar #google-search a svg {
-    display: block;
+
+
+/***************/
+/* HELP WIDGET */
+/***************/
+
+#page-toolbar #help-widget a .icon {
+	padding: 3px;
 }
 
 
@@ -8028,7 +8051,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1733355651#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1733371399#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8109,7 +8132,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733355651#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1733371399#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
