--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -5429,7 +5429,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .popup .popframe-title-bar {
     --background-color: var(--GW-popups-popup-title-bar-background-color);
 
-	flex: 1 0 auto;
+	flex: 0 0 auto;
     height: var(--popup-title-bar-height);
     border-bottom: 1px solid var(--GW-popups-popup-border-color);
     background-color: var(--background-color);
@@ -6076,6 +6076,15 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup-body.search iframe {
 	height: 3em;
+}
+
+/*┌───────────────┐*/
+/*│ Search popup. │*/
+/*└───────────────┘*/
+
+.popup.help {
+	width: var(--GW-popups-popup-max-width);
+	height: var(--GW-popups-popup-max-height);
 }
 
 /*=---------------=*/
