--- a/css/default.css
+++ b/css/default.css
@@ -949,6 +949,15 @@ blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::
     border-top: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
+.annotation .collapse.aux-links-append.expanded-not,
+.annotation .collapse.file-include-collapse.expanded-not {
+	display: flow-root;
+}
+.annotation .collapse.aux-links-append.expanded,
+.annotation .collapse.file-include-collapse.expanded {
+	clear: both;
+}
+
 .annotation .collapse.aux-links-append > .collapse-content-wrapper,
 .annotation .collapse.file-include-collapse > .collapse-content-wrapper {
     padding: 0.5em 0 0.5em 2px;
